Updating Root Gh-pages URL

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-academind-tutorial",
-  "homepage": "https://vasudeveloper001.github.io/react-basics/",
+  "homepage": "https://vasudeveloper001.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
